# ndk-camera_live

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/wind/ndk/camera/live/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  JavaCallHelper.cpp  JavaCallHelper.h  VideoChannel.cpp  VideoChannel.h  androidlog.h  callback.h  native-lib.cpp
app/src/main/cpp/libyuv/: CMakeLists.txt
app/src/main/cpp/libyuv/include/libyuv/: convert.h
app/src/main/java/com/wind/ndk/camera/live/: ImageUtil.java  MainActivity.java  RtmpClient.java  VideoChannel.java
app/src/main/jni/: com_wind_ndk_camera_live_ImageUtil.cpp  com_wind_ndk_camera_live_ImageUtil.h  com_wind_ndk_camera_live_RtmpClient.cpp  com_wind_ndk_camera_live_RtmpClient.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/wind/ndk/camera/live/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
